# bitcoin-brc20-indexer

./: .bumpversion.cfg  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
.circleci/: config.yml
deployments/k8s/: dev-deploy.yml  dev-secret.yml
invalid_txs/: invalid_txs.json
src/: brc20_index.rs  main.rs  mongo.rs
src/brc20_index/: brc20_ticker.rs  brc20_tx.rs  consts.rs  deploy.rs  invalid_brc20.rs  mint.rs  model.rs  mongo.rs  transfer.rs  user_balance.rs  utils.rs
