[package]
name = "btc-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
bitcoincore-rpc = "0.17.0"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.97"
dotenv = "0.15.0"
serde = {version = "1.0.164", features = ["derive"] }
mongodb = "2.5.0"
anyhow = "1.0.71"
